# git-watch

./: .gitignore  Cargo.toml  Makefile  README.md  fastforward.c  fastforward.h  flake.nix  git-watch.boilerplate.service  git-watch.c  git-watch.cpp  push.c  push.h
src/: fastforward.rs  ident.rs  main.rs  push.rs
