[package]
name = "git-fsnotify"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "^4.6", features = ["derive"] }
git2 = { version = "^0.21", default-features = false, features = ["ssh"] }
notify = "8.1.0"
notify-debouncer-full = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
